--- a/event.html
+++ b/event.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
@@ -1150,32 +1150,6 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
-=======
-    <div class="parallax section dbcolor">
-        <div class="container">
-            <div class="row logos">
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
-                </div>
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->  
->>>>>>> 1fe87f70abc34b8e9b87ac847edf256addd2e8b3
 
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
@@ -1248,16 +1222,33 @@
                         </ul>
                     </div> <!-- /.widget -->
                 </div> <!-- /.col-lg-3 -->
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Scholarships</h3>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Apps Design</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Marketing</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Research</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a>
-                    </div>
+
+                <div class="col-md-3 mb-4">
+                    <h5 class="fw-bold">Study Abroad</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="study-in-us.html" class="text-white">Study In United States</a></li>
+                        <li><a href="study-in-ireland.html" class="text-white">Study In Ireland</a></li>
+                        <li><a href="study-in-germany.html" class="text-white">Study In Germany</a></li>
+                        <li><a href="study-in-australia.html" class="text-white">Study In Australia</a></li>
+                        <li><a href="study-in-uae.html" class="text-white">Study In UAE</a></li>
+                        <li><a href="study-in-malta.html" class="text-white">Study In Malta</a></li>
+                        <li><a href="study-in-france.html" class="text-white">Study In France</a></li>
+                        <li><a href="study-in-spain.html" class="text-white">Study In Spain</a></li>
+                        <li><a href="study-in-uk.html" class="text-white">Study In UK</a></li>
+                    </ul>
                 </div>
+
+                <!-- Footer Column 3: News and Blog -->
+                <div class="col-md-3 mb-4">
+                    <h5 class="fw-bold">News & Updates</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
+                        <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
+                        </li>
+                        <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
+                    </ul>
+                </div>
+
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Quick Links</h3>
                     <div class="d-flex flex-column justify-content-start">
@@ -1278,20 +1269,36 @@
         </div>
     </div>
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <!-- Google reCAPTCHA -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <!-- Floating WhatsApp Chat Button -->
+    <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
+    </a>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">↑</button>
+
+    <!-- Chatbot Integration (Placeholder) -->
+    <div id="backToTop" class="chatbot-icon">
+        <button class="btn btn-info" id="chatbot-btn">
+            <i class="fas fa-comments"></i> Chat with us!
+        </button>
+    </div>
+
     <!-- Footer End -->
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.animateNumber.min.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.ts"></script>
 
 </body>
-
-</html>
