--- a/Paruluniversity.html
+++ b/Paruluniversity.html
@@ -455,22 +455,78 @@
         </div>
     </section>
 
-    <!-- FOOTER SECTION -->
-    <footer class="bg-dark text-white py-5">
-        <div class="container">
+    <!-- Footer Start -->
+    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
+        <div class="container mt-5 pt-5">
             <div class="row">
-                <!-- Footer Column 1: About Us and Contact Info -->
-                <div class="col-md-3 mb-4">
-                    <h5 class="fw-bold">About Us</h5>
-                    <p>Changing lives through education & making fundamental differences in living standards & access to
-                        learning globally.</p>
-                    <ul class="list-unstyled">
-                        <li><a href="about-us.html" class="text-white">About Us</a></li>
-                        <li><a href="contact-us.html" class="text-white">Contact Us</a></li>
-                    </ul>
+                <div class="col-md-6 mb-5">
+                    <a href="index.html" class="navbar-brand">
+                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+                    </a>
+                    <p class="m-0">
+                        Mtendere Education Consult is a leading online education company dedicated to providing
+                        high-quality education to its clients. Our mission is to help students achieve their dreams and
+                        achieve their academic goals, while also providing them with the tools and support they need to
+                        succeed.
+                    </p>
                 </div>
+                <div class="col-md-6 mb-5">
+                    <h3 class="text-white mb-4">Newsletter</h3>
+                    <div class="w-100">
+                        <div class="input-group">
+                            <input type="text" class="form-control border-light" style="padding: 30px;"
+                                placeholder="Your Email Address">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary px-4">Sign Up</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Get In Touch</h3>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>
+                        Babaje House, Off Mandala Road,<br>
+                        Area 3, Behind NBs<br>
+                        1st Floor Room 1,<br>
+                        Lilongwe<br>
+                    </p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="widget">
+                        <h3>Gallery</h3>
+                        <ul class="instafeed instagram-gallery list-unstyled">
+                            <li><a class="instagram-item" href="images/gal_1.jpg" data-fancybox="gal"><img
+                                        src="images/gal_1.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_2.jpg" data-fancybox="gal"><img
+                                        src="images/gal_2.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_3.jpg" data-fancybox="gal"><img
+                                        src="images/gal_3.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_4.jpg" data-fancybox="gal"><img
+                                        src="images/gal_4.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_5.jpg" data-fancybox="gal"><img
+                                        src="images/gal_5.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_6.jpg" data-fancybox="gal"><img
+                                        src="images/gal_6.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                        </ul>
+                    </div> <!-- /.widget -->
+                </div> <!-- /.col-lg-3 -->
 
-                <!-- Footer Column 2: Study Abroad Destinations -->
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">Study Abroad</h5>
                     <ul class="list-unstyled">
@@ -497,38 +553,56 @@
                     </ul>
                 </div>
 
-                <!-- Footer Column 4: Useful Links -->
-                <div class="col-md-3 mb-4">
-                    <h5 class="fw-bold">Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="privacy-policy.html" class="text-white">Privacy Policy</a></li>
-                        <li><a href="terms-conditions.html" class="text-white">Terms & Conditions</a></li>
-                        <li><a href="faqs.html" class="text-white">FAQs</a></li>
-                        <li><a href="student-referral.html" class="text-white">Student Referral Scheme</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row mt-4">
-                <!-- Social Media Icons -->
-                <div class="col text-center">
-                    <a href="#" class="text-white me-4"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-white me-4"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-white me-4"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="text-white me-4"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-
-            <!-- Footer Bottom -->
-            <div class="row mt-4">
-                <div class="col text-center">
-                    <p>&copy; 2025 Mtendere Education Consult. All Rights Reserved.</p>
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Quick Links</h3>
+                    <div class="d-flex flex-column justify-content-start">
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                            Condition</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <div class="copyrights">
+        <div class="container">
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+        </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Google reCAPTCHA -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <!-- Floating WhatsApp Chat Button -->
+    <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
+    </a>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">↑</button>
+
+    <!-- Chatbot Integration (Placeholder) -->
+    <div id="backToTop" class="chatbot-icon">
+        <button class="btn btn-info" id="chatbot-btn">
+            <i class="fas fa-comments"></i> Chat with us!
+        </button>
+    </div>
+
+    <!-- Footer End -->
+
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.animateNumber.min.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.ts"></script>
+
 </body>
-
-</html>
