--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span data-target="#formModal" onclick="formModal(true)" class="d-lg-inline-block">Have a questions?</span></a>
+                        <a href="#faqModal" class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
+                            <span data-target="#faqModal"  class="d-lg-inline-block">Have a questions?</span></a>
                         <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i><span
                                 class="d-none d-lg-inline-block">
 
@@ -123,7 +123,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                    <a href="#" class="btn-book btn btn-secondary btn-sm" data-target="#formModal">Enroll Now</a>
+                    <a href="#formModal" class="btn-book btn btn-secondary btn-sm" data-target="#formModal">Enroll Now</a>
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
                         data-toggle="collapse" data-target="#main-navbar">
@@ -589,7 +589,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section pt-0 bg-img overlay" style="background-image: url('images/img-school-1-min.jpg');">
+    <div class="untree_co-section pt-0 bg-img overlay" style="background-image: url('images/img-school-1-min.jpg'); background-repeat:no-repeat;">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-lg-7">
@@ -975,7 +975,8 @@
                 </div>
             </div>
         </div>
-    </div> <!-- /.untree_co-section -->
+    </div>
+    <!-- /.untree_co-section -->
 
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
