--- a/about.html
+++ b/about.html
@@ -335,16 +335,51 @@
                     <div class="accordion-img mr-4">
                       <img src="images/img-school-2-min.jpg" alt="Image" class="img-fluid">
                     </div>
+                    <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores
+                      amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita
+                      est. Diam sanctus gubergren sit rebum clita amet.</p>
+                    <div class="d-flex mb-3">
+                      <div class="btn-icon bg-primary mr-4">
+                        <i class="fa fa-graduation-cap text-white"></i>
+                      </div>
+                      <div class="mt-n1">
+                        <h4>Skilled Instructors</h4>
+                        <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
+                          nonumy et eos dolor magna ipsum.</p>
+                      </div>
+                    </div>
+                    <div class="d-flex mb-3">
+                      <div class="btn-icon bg-secondary mr-4">
+                        <i class="fa fa-certificate text-white"></i>
+                      </div>
+                      <div class="mt-n1">
+                        <h4>International Certificate</h4>
+                        <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
+                          nonumy et eos dolor magna ipsum.</p>
+                      </div>
+                    </div>
+                    <div class="d-flex">
+                      <div class="btn-icon bg-warning mr-4">
+                        <i class="fa fa-book-reader text-white"></i>
+                      </div>
+                      <div class="mt-n1">
+                        <h4>Online Classes</h4>
+                        <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita
+                          magna kasd no nonumy et eos dolor magna ipsum.</p>
+                      </div>
+                    </div>
                     <div>
-                      <p>Far far away, behind the word mountains, far from the countries Vokalia
-                        and Consonantia, there live the blind texts. </p>
-                      <p>Separated they live in Bookmarksgrove right at the coast of the
-                        Semantics, a large language ocean.</p>
+                      <div class="col-lg-5" style="min-height: 500px;">
+                        <div class="position-relative h-100">
+                          <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div> <!-- .accordion-item -->
+            </div>
+            <!-- .accordion-item -->
             <div class="accordion-item">
               <h2 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
@@ -394,7 +429,7 @@
             est. Diam sanctus gubergren sit rebum clita amet.</p>
           <div class="d-flex mb-3">
             <div class="btn-icon bg-primary mr-4">
-              <i class="fa fa-2x fa-graduation-cap text-white"></i>
+              <i class="fa fa-graduation-cap text-white"></i>
             </div>
             <div class="mt-n1">
               <h4>Skilled Instructors</h4>
@@ -404,7 +439,7 @@
           </div>
           <div class="d-flex mb-3">
             <div class="btn-icon bg-secondary mr-4">
-              <i class="fa fa-2x fa-certificate text-white"></i>
+              <i class="fa fa-certificate text-white"></i>
             </div>
             <div class="mt-n1">
               <h4>International Certificate</h4>
@@ -414,7 +449,7 @@
           </div>
           <div class="d-flex">
             <div class="btn-icon bg-warning mr-4">
-              <i class="fa fa-2x fa-book-reader text-white"></i>
+              <i class="fa fa-book-reader text-white"></i>
             </div>
             <div class="mt-n1">
               <h4>Online Classes</h4>
