--- a/gallery.html
+++ b/gallery.html
@@ -227,90 +227,78 @@
         </div>
     </div>
 
-    <!-- Portfolio Start -->
-    <div class="container-fluid py-5">
-        <div class="container pt-5 pb-3">
-            <h1 class="display-4 text-uppercase text-center mb-5">Visit Our Projects</h1>
-            <div class="row">
-                <div class="col-12 text-center mb-2">
-                    <ul class="list-inline mb-4" id="portfolioFilter">
-                        <li class="btn btn-outline-dark text-uppercase py-2 px-4 active" data-filter="*">
-                            <i class="fa fa-star text-primary mr-2"></i>All
-                        </li>
-                        <li class="btn btn-outline-dark text-uppercase py-2 px-4" data-filter=".first">
-                            <i class="fa fa-laptop-code text-primary mr-2"></i>Design
-                        </li>
-                        <li class="btn btn-outline-dark text-uppercase py-2 px-4" data-filter=".second">
-                            <i class="fa fa-mobile-alt text-primary mr-2"></i>Development
-                        </li>
-                    </ul>
-                </div>
+    <section id="stories" class="container my-5">
+        <h2 class="text-center">Student Achievements & Stories</h2>
+        <div class="row">
+          <!-- Story Card 1 -->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 1">
+              <div class="card-body">
+                <h5 class="card-title">Student Success: Jane Doe</h5>
+                <p class="card-text">From Malawi to Canada - A success story of persistence and hard work.</p>
+                <a href="#" class="btn btn-primary">Read Story</a>
+              </div>
             </div>
-            <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt="">
-                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-4x fa-plus text-primary"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+          </div>
+          <!-- Story Card 2 -->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 2">
+              <div class="card-body">
+                <h5 class="card-title">Student Spotlight: John Smith</h5>
+                <p class="card-text">John's journey from Malawi's high school to pursuing his master's in the UK.</p>
+                <a href="#" class="btn btn-primary">Read Story</a>
+              </div>
             </div>
+          </div>
+          <!-- Story Card 3 -->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 3">
+              <div class="card-body">
+                <h5 class="card-title">Scholarship Recipient: Linda</h5>
+                <p class="card-text">How Linda secured a full scholarship for an engineering program in the US.</p>
+                <a href="#" class="btn btn-primary">Read Story</a>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+      </section>
+      
     <!-- Portfolio End -->
+
+    <section id="gallery" class="container my-5">
+        <h2 class="text-center">Student Gallery</h2>
+        <div class="row">
+          <div class="col-md-4 gallery-item">
+            <img src="https://via.placeholder.com/500x300" class="gallery-img img-fluid" alt="Gallery Image 1">
+            <div class="like-status">
+              <span>👍 12 Likes</span>
+              <button class="btn-like">❤️ Like</button>
+            </div>
+            <div class="like-animation">❤️</div>
+          </div>
+          <div class="col-md-4 gallery-item">
+            <img src="https://via.placeholder.com/500x300" class="gallery-img img-fluid" alt="Gallery Image 2">
+            <div class="like-status">
+              <span>👍 15 Likes</span>
+              <button class="btn-like">❤️ Like</button>
+            </div>
+            <div class="like-animation">❤️</div>
+          </div>
+          <div class="col-md-4 gallery-item">
+            <img src="https://via.placeholder.com/500x300" class="gallery-img img-fluid" alt="Gallery Image 3">
+            <div class="like-status">
+              <span>👍 20 Likes</span>
+              <button class="btn-like">❤️ Like</button>
+            </div>
+            <div class="like-animation">❤️</div>
+          </div>
+        </div>
+        <button id="toggleGallery" class="btn btn-primary my-3">Pause Slideshow</button>
+      </section>
+      
 
     <div class="untree_co-section">
         <div class="container">
