--- a/service.html
+++ b/service.html
@@ -183,83 +183,46 @@
     </div>
     <!-- Header End -->
 
-    <!--- Services Starts--->
-    <div class="container-fluid py-5">
-        <div class="text-center">
-            <h6 class="section-title bg-white text-center text-primary px-3">Services</h6>
-            <h1 class="mb-5">What Do We Do?</h1>
-        </div>
+    <div class="container mt-5">
+        <h2 class="text-center mb-4" style="color: var(--primary-color);">Our Services</h2>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <div class="card h-100">
-                    <img src="img/feature1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h4 class="card-title">Educational Consultancy</h4>
-                        <p class="card-text">
-                            We provide customized educational consultations to help students understand their academic
-                            goals, identify their strengths, and develop the necessary skills to succeed in their
-                            studies.
-                        </p>
-                        <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="card-footer text-muted">
-                    <small>Last updated 3 mins ago</small>
-                </div>
+          <div class="col-md-4 service-card">
+            <div class="service-inner">
+              <div class="service-front">
+                <h5>University Application</h5>
+                <p>We guide students through applications to top international universities.</p>
+              </div>
+              <div class="service-back">
+                <p>Includes documentation review, application writing, visa support & interview coaching.</p>
+              </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <div class="card h-100">
-                <img src="img/feature1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h4 class="card-title">Educational Consultancy</h4>
-                    <p class="card-text">
-                        We provide customized educational consultations to help students understand their academic
-                        goals, identify their strengths, and develop the necessary skills to succeed in their
-                        studies.
-                    </p>
-                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
-                </div>
+          </div>
+          <div class="col-md-4 service-card">
+            <div class="service-inner">
+              <div class="service-front">
+                <h5>Scholarship Advisory</h5>
+                <p>Find and apply for available scholarships tailored to your goals.</p>
+              </div>
+              <div class="service-back">
+                <p>We assess eligibility, prepare you for success, and help with all paperwork.</p>
+              </div>
             </div>
-            <div class="card-footer text-muted">
-                <small>Last updated 3 mins ago</small>
+          </div>
+          <div class="col-md-4 service-card">
+            <div class="service-inner">
+              <div class="service-front">
+                <h5>Virtual Consultations</h5>
+                <p>Book sessions with our advisors to plan your academic journey.</p>
+              </div>
+              <div class="service-back">
+                <p>One-on-one sessions to explore university programs and career paths.</p>
+              </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <div class="card h-100">
-                <img src="img/feature1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h4 class="card-title">Educational Consultancy</h4>
-                    <p class="card-text">
-                        We provide customized educational consultations to help students understand their academic
-                        goals, identify their strengths, and develop the necessary skills to succeed in their
-                        studies.
-                    </p>
-                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
-            <div class="card-footer text-muted">
-                <small>Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <div class="card h-100">
-                <img src="img/feature1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h4 class="card-title">Educational Consultancy</h4>
-                    <p class="card-text">
-                        We provide customized educational consultations to help students understand their academic
-                        goals, identify their strengths, and develop the necessary skills to succeed in their
-                        studies.
-                    </p>
-                    <a href="services.html#consultancy" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
-            <div class="card-footer text-muted">
-                <small>Last updated 3 mins ago</small>
-            </div>
+          </div>
         </div>
     </div>
+
+    
 
     <div id="faqModal" class="faq-modal">
         <div class="faq-content">
